--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 </head>
 <body>
 <main>
-    <div role="main" id="container">
+    <div id="container">
       <img id="img-illustration" src="assets/images/illustration-article.svg" alt="">
       <p id="learning">Learning</p>
       <p style="font-weight: 600; margin-bottom: -10px;">Published 21 Dec 2023</p>
